src/objects/Brand__c.object
<CustomObject>
    <fields>
        <fullName>AllTimeClientSpend__c</fullName>
        <label>All Time Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verticals__c</fullName>
        <label>Company Verticals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Beverage</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>Baby &amp; Child Care (CPG)</fullName>
                </value>
                <value>
                    <fullName>Beverages (CPG)</fullName>
                </value>
                <value>
                    <fullName>Business &amp; Finance</fullName>
                </value>
                <value>
                    <fullName>Consumer App</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy &amp; Industrial Services</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Fitness</fullName>
                </value>
                <value>
                    <fullName>Food (CPG)</fullName>
                </value>
                <value>
                    <fullName>Gambling</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Government &amp; Advocacy</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Beauty (CPG)</fullName>
                </value>
                <value>
                    <fullName>Healthcare &amp; Insurance</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Garden (CPG)</fullName>
                </value>
                <value>
                    <fullName>Household Appliances (CPG)</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>News &amp; Politics</fullName>
                </value>
                <value>
                    <fullName>Pets (CPG)</fullName>
                </value>
                <value>
                    <fullName>Photography, Publishing &amp; Art</fullName>
                </value>
                <value>
                    <fullName>QSR</fullName>
                </value>
                <value>
                    <fullName>Restaurants</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Science &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X2013ClientSpend__c</fullName>
        <label>2013 Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014ClientSpend__c</fullName>
        <label>2014 Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015ClientSpend__c</fullName>
        <label>2015 Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All_Brands</fullName>
        <columns>NAME</columns>
        <columns>AllTimeClientSpend__c</columns>
        <columns>Verticals__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Brands</label>
    </listViews>
    <listViews>
        <fullName>All_Clients</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AllTimeClientSpend__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>All Clients</label>
    </listViews>
    <listViews>
        <fullName>QSR</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Verticals__c</field>
            <operation>equals</operation>
            <value>QSR</value>
        </filters>
        <filters>
            <field>AllTimeClientSpend__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>QSR Clients</label>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CantEditBrandName</fullName>
        <active>true</active>
        <description>Lock edition of brand name for all except admins</description>
        <errorConditionFormula>$User.ProfileId !=&apos;00eU0000000iVp4&apos; &amp;&amp; ischanged(Name)</errorConditionFormula>
        <errorMessage>You cannot change the Brand Name. If this is required please contact Adminiastration</errorMessage>
    </validationRules>
</CustomObject>